# tetris-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README  README.md  build-project  conanfile.txt  install-tools-project  main.c  main.cpp  run-project  run.py  vcpkg.json
classes/: app.h  board.h  board.hpp  button.h  button.hpp  color.h  config.h  game.h  game.hpp  linked_list.hpp  node.hpp  piece.h  piece.hpp  point_board.h  point_board.hpp  point_on_board.h
src/: app.c  app.cr  board.c  board.cpp  button.c  button.cpp  color.c  game.c  game.cpp  linked_list.cpp  main.c  piece.c  piece.cpp  random_number_generator.c  rectagle.c  text_box.c
src/classes/: app.h  config.h  game.h  piece.h  point_on_board.h  text_box.h
src/renderers/: rectagle_renderer.c  text_renderer.c
